src/objects/Plan_Image__c.object
<CustomObject>
    <description>MG_Plan Image</description>
    <fields>
        <fullName>Display_in_Zonda__c</fullName>
        <formula>Plan__r.Display_in_Zonda__c</formula>
        <inlineHelpText>Controlled By Plan</inlineHelpText>
        <label>Display in Zonda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Image_Source_New__c</fullName>
        <label>Image Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BHI</fullName>
                    <default>true</default>
                    <label>BHI</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image_Source__c</fullName>
        <label>Image Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Plan Images</relationshipLabel>
        <relationshipName>Plan_Images</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Primary_URL_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will tell us if we&apos;re able to get an image from the URL we received from the data provider</description>
        <label>Primary URL Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_URL__c</fullName>
        <description>This field will store a link to a downloaded copy of the Image</description>
        <label>Secondary URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Elevation</fullName>
                </value>
                <value>
                    <fullName>Interior</fullName>
                </value>
                <value>
                    <fullName>FloorPlan</fullName>
                </value>
                <value>
                    <fullName>VirtualTour</fullName>
                </value>
                <value>
                    <fullName>PlanViewer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Plan Image</label>
    <nameField>
        <label>Plan Image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Images</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>